<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <TextView
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/material_on_surface_emphasis_high_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/menu"
                android:gravity="center_vertical"/>
        </LinearLayout>

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:id="@+id/close_bottom"
            android:src="@drawable/ic_baseline_close"/>

    </LinearLayout>
    <View
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/divider"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/copyHadist"
        android:background="?android:attr/selectableItemBackground"
        android:padding="5dp">



        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_baseline_content_copy"
            android:padding="6dp"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:textColor="@color/material_on_surface_emphasis_high_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy_hadist"
            android:layout_gravity="center_vertical"
            android:padding="8dp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/divider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/shareHadist"
        android:padding="8dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_baseline_share"
            android:padding="6dp"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:textColor="@color/material_on_surface_emphasis_high_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_hadist"
            android:layout_gravity="center_vertical"
            android:padding="8dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/divider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/reportErrorHadist"
        android:padding="8dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_baseline_error"
            android:padding="6dp"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:textColor="@color/material_on_surface_emphasis_high_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_hadist"
            android:layout_gravity="center_vertical"
            android:padding="8dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/divider"/>

</LinearLayout>